src/styles/core/_grid.scss
// ----------------------------------------------------------------------------
// Layout & Site Grid
// ----------------------------------------------------------------------------
//
// Global grid modifications and base container maximums.
//
// ----------------------------------------------------------------------------

// -------------------------------------
// Base Layout declarations
// -------------------------------------
@-ms-viewport{
    width: device-width;
}

html {
    background-color: $background-color--site;
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}


// Main Grid
// -------------------------------------
.site-layout {
    display: block;
    min-height: 100vh;
    max-width: 100%; // for IE 11
    width: 100%; // for IE 11

    @supports (display:grid) {
        display: grid;
        grid-template-columns: [full-start] minmax((#{$site-gutter} / 2), 1fr) [main-start] minmax(0, #{$site-width}) [main-end] minmax((#{$site-gutter} / 2), 1fr) [full-end];
        grid-template-rows: auto 1fr auto;
        max-width: initial;
        width: 100%;
    }

    @include bp(laptop) {
        grid-template-columns: [full-start] minmax(#{$site-gutter}, 1fr) [main-start] minmax(0, #{$site-width}) [main-end] minmax(#{$site-gutter}, 1fr) [full-end];
    }

    // All content defaults to one column
    > * {
        grid-column: main;
    }

    header {
        align-self: end;
    }

    main {
        align-self: stretch;
    }

    footer {
        align-self: start;
    }
}


// -------------------------------------
// Container
// -------------------------------------
@mixin container {
    margin: 0 auto;
    max-width: $site-width;
    padding: 0;
    width: calc(100% - #{$site-gutter});
}

.container {
    @include container;
}



// -------------------------------------
// Theme styles
// -------------------------------------
.page-section {
    padding: $site-gutter ($site-gutter / 2);

    @include bp(laptop) {
        padding: ($site-gutter * 2) $site-gutter;
    }
}

.page-section--header {
    padding: ($site-gutter / 2);

    @include bp(laptop) {
        padding: ($site-gutter * 2) $site-gutter $site-gutter;
    }
}

.page-section--footer {
    padding: ($site-gutter / 2) ($site-gutter / 2) ($site-gutter / 4);

    @include bp(laptop) {
        padding: ($site-gutter / 2) $site-gutter;
    }
}

.page-section--content {
    background-color: $background-color;
    border-radius: 5px;
}

.page-section__title {
    border-bottom: 2px solid $border-color;
    margin-bottom: ($site-gutter / 2);

    @include bp(laptop) {
        border-bottom: 3px solid $border-color;
        margin-bottom: $site-gutter;
    }
}

